[package]
name = "first-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
first-target = { version = "0.1.0", path = "../first-target" }
libafl = "0.11.2"
libafl_bolts = "0.11.2"
libafl_targets = { version = "0.11.2", features = [
    "sancov_8bit",
    "observers",
] }
mimalloc = "0.1.43"
