[package]
name = "first-target"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl_targets = { version = "0.11.2", features = [
    "sancov_8bit",
    "observers",
] }

[lib]
crate-type = ["staticlib"]
